sorted and reversed ricerca